--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/docs/favicon.ico" type="image/x-icon" />
+    <link rel="image_src" href="/smartdspre.png?v=2" />
     <title>СМАРТ ДАРКСТОР - Революционное решение для управления заказами</title>
     <meta name="description" content="Автоматизируйте сборочные процессы, повысьте эффективность и оптимизируйте работу торговой точки с помощью интеллектуальной системы управления" />
     <meta name="author" content="СМАРТ ДАРКСТОР" />
