--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="СМАРТ ДАРКСТОР - Революционное решение для управления заказами" />
     <meta property="og:description" content="Автоматизируйте сборочные процессы, повысьте эффективность и оптимизируйте работу торговой точки" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/smartdspre.png?v=2" />
+    <meta property="og:image" content="/public/smartdspre.png" />
     <meta property="og:url" content="https://smartdarkstore.ru/" />
 
     <meta name="twitter:card" content="summary" />
